<?xml version="2.0"?>
<package format="2">
  <name>weeding_examples</name>
  <version>0.1.0</version>
  <description>Simple example of ROS nodelet</description>
  <maintainer email="will@greentechrobotics.com"/>
  <license>Proprietary and Confidential</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <export>
  </export>
</package>
